# libmapper

./: .gitignore  .travis.yml  CMakeLists.txt  configure.ac
.github/workflows/: main.yml
src/: database.c  device.c  graph.c  link.c  map.c  network.c  router.c  types_internal.h
test/: testparser.c  testselfconnection.c
